--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ a:hover {
 
 html,
 body {
+
   background-color: #fff;
 }
 body {
@@ -62,8 +63,7 @@ body {
  * Header
  */
 .masthead-brand {
-  margin-top: 10px;
-  margin-bottom: 10px;
+
 }
 
 .masthead-nav > li {
@@ -123,7 +123,7 @@ body {
 @media (min-width: 768px) {
   /* Pull out the header and footer */
   .masthead {
-    position: absolute;
+    position: fixed;
     top: 0;
   }
   /* Start the vertical centering */
